--- a/app/src/main/res/layout/activity_select_song_by.xml
+++ b/app/src/main/res/layout/activity_select_song_by.xml
@@ -7,43 +7,38 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.musicstructureappproject.SelectSongBy">
+    tools:context="com.example.android.musicstructureappproject.SelectSongByActivity">
 
     <LinearLayout
         android:id="@+id/selectBySong"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/toSongsList"
+            style="@style/EightDPMarginPadding"
             android:layout_width="0dp"
             android:layout_height="36dp"
             android:layout_marginBottom="70dp"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="70dp"
             android:layout_weight="1"
             android:background="@color/textSecondary"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:text="Song List" />
+            android:text="@string/song_tag" />
 
         <TextView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="the above takes the user to the main lists activity, this takes the user to the song list activity, and below to the albums list activity"
-            android:background="@color/colorPrimaryLight"/>
+            android:background="@color/colorPrimaryLight"
+            android:text="@string/criteria_screen_explanation" />
 
         <ImageView
             android:id="@+id/toSongsListButton"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:background="@drawable/list_button"
-            android:layout_gravity="center_vertical"/>
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/list_button" />
 
     </LinearLayout>
 
@@ -51,28 +46,21 @@
         android:id="@+id/backToMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_above="@+id/selectBySong">
+        android:layout_above="@+id/selectBySong"
+        android:orientation="horizontal">
 
         <TextView
+            style="@style/EightDPMarginPadding"
             android:layout_width="0dp"
             android:layout_height="36dp"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_weight="1"
             android:background="@color/textSecondary"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:text="Back to Main View" />
+            android:text="@string/to_main_view_tag" />
 
         <ImageView
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:background="@drawable/back_button"/>
+            android:background="@drawable/back_button" />
 
     </LinearLayout>
 
@@ -80,23 +68,16 @@
         android:id="@+id/toAlbumsList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@+id/selectBySong">
+        android:layout_below="@+id/selectBySong"
+        android:orientation="horizontal">
 
         <TextView
+            style="@style/EightDPMarginPadding"
             android:layout_width="0dp"
             android:layout_height="36dp"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_weight="1"
             android:background="@color/textSecondary"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:text="Album List" />
+            android:text="@string/album_tag" />
 
         <ImageView
             android:layout_width="48dp"
