--- a/app/src/main/res/layout/activity_song_select.xml
+++ b/app/src/main/res/layout/activity_song_select.xml
@@ -19,33 +19,19 @@
         android:orientation="horizontal">
 
         <TextView
+            style="@style/EightDPMarginPadding"
             android:layout_width="0dp"
             android:layout_height="48dp"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_weight="1"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:text="Now Playing" />
+            android:text="@string/now_playing" />
 
 
         <TextView
+            style="@style/EightDPMarginPadding"
             android:layout_width="0dp"
             android:layout_height="48dp"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_weight="1"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:text="Some Song by Some Singer" />
+            android:text="@string/song_now_playing" />
 
         <ImageView
             android:layout_width="68dp"
@@ -57,29 +43,21 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="The above fields show the audio file that is currently playing or was played last and it takes its information from the nowplaying activity"/>
-
+        android:text="@string/now_playing_view_explanation" />
 
     <TextView
         android:id="@+id/criteriaSelect"
+        style="@style/EightDPMarginPadding"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="26dp"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:background="@color/colorAccent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:text="Songs" />
+        android:text="@string/song_tag" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="This screen will list all the available on device audio files using the Class:MediaStore.audio in terms of songs, it can also fetch the details of the file like album art and artist"/>
-
+        android:text="@string/songs_screen_explanation" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -102,19 +80,12 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        style="@style/EightDPMarginPadding"
                         android:layout_width="0dp"
                         android:layout_height="36dp"
-                        android:layout_marginBottom="@dimen/activity_vertical_margin"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        android:layout_marginTop="@dimen/activity_vertical_margin"
                         android:layout_weight="1"
                         android:background="@color/textSecondary"
-                        android:paddingBottom="@dimen/activity_vertical_margin"
-                        android:paddingLeft="@dimen/activity_horizontal_margin"
-                        android:paddingRight="@dimen/activity_horizontal_margin"
-                        android:paddingTop="@dimen/activity_vertical_margin"
-                        android:text="A song    by A Singer" />
+                        android:text="@string/song_now_playing" />
 
                     <ImageView
                         android:layout_width="48dp"
@@ -129,19 +100,12 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        style="@style/EightDPMarginPadding"
                         android:layout_width="0dp"
                         android:layout_height="36dp"
-                        android:layout_marginBottom="@dimen/activity_vertical_margin"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        android:layout_marginTop="@dimen/activity_vertical_margin"
                         android:layout_weight="1"
                         android:background="@color/textSecondary"
-                        android:paddingBottom="@dimen/activity_vertical_margin"
-                        android:paddingLeft="@dimen/activity_horizontal_margin"
-                        android:paddingRight="@dimen/activity_horizontal_margin"
-                        android:paddingTop="@dimen/activity_vertical_margin"
-                        android:text="A song    by A Singer" />
+                        android:text="@string/song_now_playing" />
 
                     <ImageView
                         android:layout_width="48dp"
@@ -156,19 +120,12 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        style="@style/EightDPMarginPadding"
                         android:layout_width="0dp"
                         android:layout_height="36dp"
-                        android:layout_marginBottom="@dimen/activity_vertical_margin"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        android:layout_marginTop="@dimen/activity_vertical_margin"
                         android:layout_weight="1"
                         android:background="@color/textSecondary"
-                        android:paddingBottom="@dimen/activity_vertical_margin"
-                        android:paddingLeft="@dimen/activity_horizontal_margin"
-                        android:paddingRight="@dimen/activity_horizontal_margin"
-                        android:paddingTop="@dimen/activity_vertical_margin"
-                        android:text="A song    by A Singer" />
+                        android:text="@string/song_now_playing" />
 
                     <ImageView
                         android:layout_width="48dp"
@@ -183,19 +140,12 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        style="@style/EightDPMarginPadding"
                         android:layout_width="0dp"
                         android:layout_height="36dp"
-                        android:layout_marginBottom="@dimen/activity_vertical_margin"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        android:layout_marginTop="@dimen/activity_vertical_margin"
                         android:layout_weight="1"
                         android:background="@color/textSecondary"
-                        android:paddingBottom="@dimen/activity_vertical_margin"
-                        android:paddingLeft="@dimen/activity_horizontal_margin"
-                        android:paddingRight="@dimen/activity_horizontal_margin"
-                        android:paddingTop="@dimen/activity_vertical_margin"
-                        android:text="A song    by A Singer" />
+                        android:text="@string/song_now_playing" />
 
                     <ImageView
                         android:layout_width="48dp"
@@ -210,19 +160,12 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        style="@style/EightDPMarginPadding"
                         android:layout_width="0dp"
                         android:layout_height="36dp"
-                        android:layout_marginBottom="@dimen/activity_vertical_margin"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        android:layout_marginTop="@dimen/activity_vertical_margin"
                         android:layout_weight="1"
                         android:background="@color/textSecondary"
-                        android:paddingBottom="@dimen/activity_vertical_margin"
-                        android:paddingLeft="@dimen/activity_horizontal_margin"
-                        android:paddingRight="@dimen/activity_horizontal_margin"
-                        android:paddingTop="@dimen/activity_vertical_margin"
-                        android:text="A song    by A Singer" />
+                        android:text="@string/song_now_playing" />
 
                     <ImageView
                         android:layout_width="48dp"
@@ -237,19 +180,12 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        style="@style/EightDPMarginPadding"
                         android:layout_width="0dp"
                         android:layout_height="36dp"
-                        android:layout_marginBottom="@dimen/activity_vertical_margin"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        android:layout_marginTop="@dimen/activity_vertical_margin"
                         android:layout_weight="1"
                         android:background="@color/textSecondary"
-                        android:paddingBottom="@dimen/activity_vertical_margin"
-                        android:paddingLeft="@dimen/activity_horizontal_margin"
-                        android:paddingRight="@dimen/activity_horizontal_margin"
-                        android:paddingTop="@dimen/activity_vertical_margin"
-                        android:text="A song    by A Singer" />
+                        android:text="@string/song_now_playing" />
 
                     <ImageView
                         android:layout_width="48dp"
@@ -264,19 +200,12 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        style="@style/EightDPMarginPadding"
                         android:layout_width="0dp"
                         android:layout_height="36dp"
-                        android:layout_marginBottom="@dimen/activity_vertical_margin"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        android:layout_marginTop="@dimen/activity_vertical_margin"
                         android:layout_weight="1"
                         android:background="@color/textSecondary"
-                        android:paddingBottom="@dimen/activity_vertical_margin"
-                        android:paddingLeft="@dimen/activity_horizontal_margin"
-                        android:paddingRight="@dimen/activity_horizontal_margin"
-                        android:paddingTop="@dimen/activity_vertical_margin"
-                        android:text="A song    by A Singer" />
+                        android:text="@string/song_now_playing" />
 
                     <ImageView
                         android:layout_width="48dp"
@@ -291,19 +220,12 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        style="@style/EightDPMarginPadding"
                         android:layout_width="0dp"
                         android:layout_height="36dp"
-                        android:layout_marginBottom="@dimen/activity_vertical_margin"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        android:layout_marginTop="@dimen/activity_vertical_margin"
                         android:layout_weight="1"
                         android:background="@color/textSecondary"
-                        android:paddingBottom="@dimen/activity_vertical_margin"
-                        android:paddingLeft="@dimen/activity_horizontal_margin"
-                        android:paddingRight="@dimen/activity_horizontal_margin"
-                        android:paddingTop="@dimen/activity_vertical_margin"
-                        android:text="A song    by A Singer" />
+                        android:text="@string/song_now_playing" />
 
                     <ImageView
                         android:layout_width="48dp"
@@ -318,19 +240,12 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        style="@style/EightDPMarginPadding"
                         android:layout_width="0dp"
                         android:layout_height="36dp"
-                        android:layout_marginBottom="@dimen/activity_vertical_margin"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        android:layout_marginTop="@dimen/activity_vertical_margin"
                         android:layout_weight="1"
                         android:background="@color/textSecondary"
-                        android:paddingBottom="@dimen/activity_vertical_margin"
-                        android:paddingLeft="@dimen/activity_horizontal_margin"
-                        android:paddingRight="@dimen/activity_horizontal_margin"
-                        android:paddingTop="@dimen/activity_vertical_margin"
-                        android:text="A song    by A Singer" />
+                        android:text="@string/song_now_playing" />
 
                     <ImageView
                         android:layout_width="48dp"
@@ -345,19 +260,12 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        style="@style/EightDPMarginPadding"
                         android:layout_width="0dp"
                         android:layout_height="36dp"
-                        android:layout_marginBottom="@dimen/activity_vertical_margin"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        android:layout_marginTop="@dimen/activity_vertical_margin"
                         android:layout_weight="1"
                         android:background="@color/textSecondary"
-                        android:paddingBottom="@dimen/activity_vertical_margin"
-                        android:paddingLeft="@dimen/activity_horizontal_margin"
-                        android:paddingRight="@dimen/activity_horizontal_margin"
-                        android:paddingTop="@dimen/activity_vertical_margin"
-                        android:text="A song    by A Singer" />
+                        android:text="@string/song_now_playing" />
 
                     <ImageView
                         android:layout_width="48dp"
@@ -372,19 +280,12 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        style="@style/EightDPMarginPadding"
                         android:layout_width="0dp"
                         android:layout_height="36dp"
-                        android:layout_marginBottom="@dimen/activity_vertical_margin"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        android:layout_marginTop="@dimen/activity_vertical_margin"
                         android:layout_weight="1"
                         android:background="@color/textSecondary"
-                        android:paddingBottom="@dimen/activity_vertical_margin"
-                        android:paddingLeft="@dimen/activity_horizontal_margin"
-                        android:paddingRight="@dimen/activity_horizontal_margin"
-                        android:paddingTop="@dimen/activity_vertical_margin"
-                        android:text="A song    by A Singer" />
+                        android:text="@string/song_now_playing" />
 
                     <ImageView
                         android:layout_width="48dp"
@@ -399,19 +300,12 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        style="@style/EightDPMarginPadding"
                         android:layout_width="0dp"
                         android:layout_height="36dp"
-                        android:layout_marginBottom="@dimen/activity_vertical_margin"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        android:layout_marginTop="@dimen/activity_vertical_margin"
                         android:layout_weight="1"
                         android:background="@color/textSecondary"
-                        android:paddingBottom="@dimen/activity_vertical_margin"
-                        android:paddingLeft="@dimen/activity_horizontal_margin"
-                        android:paddingRight="@dimen/activity_horizontal_margin"
-                        android:paddingTop="@dimen/activity_vertical_margin"
-                        android:text="A song    by A Singer" />
+                        android:text="@string/song_now_playing" />
 
                     <ImageView
                         android:layout_width="48dp"
@@ -425,7 +319,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="This button will take the user back to the select by screen to choose to pick using a different criteria such as playlists or artists etc."/>
+                android:text="@string/back_button_explanation" />
 
             <ImageView
                 android:id="@+id/backToSelect"
